2003-08-07  Michael Meissner  <gnu@the-meissners.org>

	* cgen-asm.c (hash_insn_array): Remove PARAMS macro.
	(hash_insn_list): Ditto.
	(build_asm_hash_table): Ditto.
	(cgen_set_parse_operand_fn): Prototype definition.
	(cgen_init_parse_operand): Ditto.
	(hash_insn_array): Ditto.
	(hash_insn_list): Ditto.
	(build_asm_hash_table): Ditto.
	(cgen_asm_lookup_insn): Ditto.
	(cgen_parse_keyword): Ditto.
	(cgen_parse_signed_integer): Ditto.
	(cgen_parse_unsigned_integer): Ditto.
	(cgen_parse_address): Ditto.
	(cgen_validate_signed_integer): Ditto.
	(cgen_validate_unsigned_integer): Ditto.

	* cgen-opc.c (hash_keyword_name): Remove PARAMS macro.
	(hash_keyword_value): Ditto.
	(build_keyword_hash_tables): Ditto.
	(cgen_keyword_lookup_name): Prototype definition.
	(cgen_keyword_lookup_value): Ditto.
	(cgen_keyword_add): Ditto.
	(cgen_keyword_search_init): Ditto.
	(cgen_keyword_search_next): Ditto.
	(hash_keyword_name): Ditto.
	(hash_keyword_value): Ditto.
	(build_keyword_hash_tables): Ditto.
	(cgen_hw_lookup_by_name): Ditto.
	(cgen_hw_lookup_by_num): Ditto.
	(cgen_operand_lookup_by_name): Ditto.
	(cgen_operand_lookup_by_num): Ditto.
	(cgen_insn_count): Ditto.
	(cgen_macro_insn_count): Ditto.
	(cgen_get_insn_value): Ditto.
	(cgen_put_insn_value): Ditto.
	(cgen_lookup_insn): Ditto.
	(cgen_get_insn_operands): Ditto.
	(cgen_lookup_get_insn_operands): Ditto.
	(cgen_set_signed_overflow_ok): Ditto.
	(cgen_clear_signed_overflow_ok): Ditto.
	(cgen_signed_overflow_ok_p): Ditto.

	* cgen-dis.c (hash_insn_array): Remove PARAMS macro.
	(hash_insn_list): Ditto.
	(build_dis_hash_table): Ditto.
	(count_decodable_bits): Ditto.
	(add_insn_to_hash_chain): Ditto.
	(count_decodable_bits): Prototype definition.
	(add_insn_to_hash_chain): Ditto.
	(hash_insn_array): Ditto.
	(hash_insn_list): Ditto.
	(build_dis_hash_table): Ditto.
	(cgen_dis_lookup_insn): Ditto.

	* cgen-asm.in (parse_insn_normal): Remove PARAMS macro.
	(@arch@_cgen_build_insn_regex): Prototype definition.