@@ -1,3 +1,10 @@
+2003-08-14  Alan Modra  <amodra@bigpond.net.au>
+
+	* dep-in.sed: Remove libintl.h.
+	* Makefile.am (POTFILES.in): Unset LC_COLLATE.
+	Run "make dep-am".
+	* Makefile.in: Regenerate.
+
 2003-08-07  Michael Meissner  <gnu@the-meissners.org>
 
 	* cgen-asm.c (hash_insn_array): Remove PARAMS macro.
